erDiagram
    users ||--o{ user_preferences : HAS
    users ||--o{ bookings : PLACES
    users }|--|| roles : HAS_ROLE
    
    service_providers ||--o{ theatres : OPERATES
    theatres ||--o{ screens : CONTAINS
    screens ||--o{ seats : HAS_LAYOUT
    screens ||--o{ shows : SCHEDULES
    
    movies ||--o{ shows : FEATURED_IN
    
    shows ||--o{ show_seats : GENERATES_INVENTORY
    seats ||--o{ show_seats : INSTANTIATES
    
    bookings ||--o{ booking_items : CONTAINS
    show_seats ||--o{ booking_items : RESERVED_IN
    
    bookings ||--|| payments : HAS_PAYMENT
    
    users ||--o{ recommendations : REQUESTS
    recommendations ||--o{ recommendation_items : CONTAINS_RANKED
    shows ||--o{ recommendation_items : EVALUATES
    recommendations ||--o{ recommendation_feedback : RECEIVES
